# soldeer

./: .gitignore  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  USAGE.md  all_dependencies.toml  clippy.toml  flake.nix  foundry.toml  release-plz.toml  remappings.txt  soldeer.toml
.config/: nextest.toml
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  registry_request.yml
.github/workflows/: release.yml  rust.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/commands/: Cargo.toml  foundry.toml  soldeer.toml
crates/commands/src/: lib.rs  utils.rs
crates/commands/src/commands/: clean.rs  init.rs  install.rs  login.rs  mod.rs  push.rs  uninstall.rs  update.rs
crates/commands/tests/: tests-clean.rs  tests-init.rs  tests-install.rs  tests-login.rs  tests-push.rs  tests-uninstall.rs  tests-update.rs
crates/core/: Cargo.toml
crates/core/src/: auth.rs  config.rs  download.rs  errors.rs  git.rs  install.rs  lib.rs  lock.rs  push.rs  registry.rs  remappings.rs  update.rs  utils.rs
crates/core/src/lock/: forge.rs
crates/soldeer/: Cargo.toml
crates/soldeer-commands/: Cargo.toml
crates/soldeer-commands/src/: lib.rs
crates/soldeer-commands/src/commands/: init.rs  install.rs  login.rs  mod.rs  push.rs  update.rs
crates/soldeer-core/: Cargo.toml
crates/soldeer-core/src/: auth.rs  config.rs  errors.rs  lib.rs  lock.rs  push.rs  registry.rs  remappings.rs  update.rs  utils.rs
crates/soldeer/src/: main.rs
crawler/: Cargo.toml  create_all_dependencies.py  npm_repositories.toml  push_to_git.sh  repositories.db
crawler/src/: db.rs  main.rs  manager.rs  npm.rs  utils.rs
src/: archive.rs  auth.rs  commands.rs  config.rs  dependency_downloader.rs  download.rs  errors.rs  install.rs  janitor.rs  lib.rs  lock.rs  main.rs  push.rs  registry.rs  remappings.rs  remote.rs  update.rs  utils.rs  versioning.rs
src/commands/: init.rs  install.rs  login.rs  mod.rs  push.rs  uninstall.rs  update.rs
test/: emptyfile
tests/ci/: foundry.rs  main.rs
