[package]
authors = ["m4rio"]
categories = ["development-tools"]
description = "A minimal solidity package manager written in Rust, best used with Foundry."
edition = "2021"
exclude = ["/.github", "/.vscode", "/logo"]
homepage = "https://github.com/mario-eth/soldeer"
keywords = ["solidity", "package-manager", "foundry"]
license = "MIT"
name = "soldeer"
readme = "./README.md"
repository = "https://github.com/mario-eth/soldeer"
version = "0.3.0"
rust-version = "1.80"

[lints]
workspace = true

[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
# uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"

[workspace.lints.rust]
rust-2018-idioms = "warn"
# unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"

[workspace.lints.rustdoc]
all = "warn"

[dependencies]
bon = "2.0.0"
chrono = { version = "0.4.38", default-features = false, features = [
    "serde",
    "std",
] }
clap = { version = "4.5.9", features = ["derive"] }
cliclack = "0.3.4"
const-hex = "1.12.0"
dunce = "1.0.5"
email-address-parser = "2.0.0"
futures = "0.3.30"
home = "0.5.9"
ignore = { version = "0.4.22", features = ["simd-accel"] }
path-slash = "0.2.1"
regex = "1.10.5"
reqwest = { version = "0.12.5", default-features = false, features = [
    "blocking",
    "json",
    "multipart",
    "stream",
] }
sanitize-filename = "0.5.0"
semver = "1.0.23"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
thiserror = "1.0.63"
tokio = { version = "1.38.0", features = [
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
] }
toml_edit = { version = "0.22.15", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
zip = { version = "2.1.3", default-features = false, features = ["deflate"] }
zip-extract = { version = "0.2.0", default-features = false, features = [
    "bzip2",
    "deflate",
] }

[dev-dependencies]
mockito = "1.5.0"
temp-env = { version = "0.3.6", features = ["async_closure"] }
testdir = "0.9.1"

[lib]
name = "soldeer"
path = "src/lib.rs"

[[bin]]
name = "soldeer"
path = "src/main.rs"

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
serde = []
