[workspace]
members = ["crates/cli", "crates/core", "crates/commands"]
resolver = "2"

[workspace.package]
authors = ["m4rio"]
categories = ["development-tools"]
description = "A minimal Solidity package manager written in Rust, best used with Foundry"
edition = "2021"
exclude = ["tests/"]
homepage = "https://soldeer.xyz"
keywords = ["solidity", "package-manager", "foundry"]
license = "MIT"
readme = "./README.md"
repository = "https://github.com/mario-eth/soldeer"
rust-version = "1.80"
version = "0.4.0"

[workspace.lints.clippy]
dbg-macro = "warn"
manual-string-new = "warn"
uninlined-format-args = "warn"
use-self = "warn"
redundant-clone = "warn"

[workspace.lints.rust]
rust-2018-idioms = "warn"
unreachable-pub = "warn"
unused-must-use = "warn"
redundant-lifetimes = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.dependencies]
clap = { version = "4.5.9", features = ["derive"] }
cliclack = "0.3.4"
tokio = { version = "1.38.0", features = [
    "io-util",
    "macros",
    "process",
    "rt-multi-thread",
] }
thiserror = "1.0.63"
