[package]
edition = "2021"
name = "crawler"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.26", features = ["serde"]}
rusqlite = {version = "0.29.0", features = ["bundled", "chrono"]}
serde = {version = "1.0.171", features = ["derive"]}
serde_derive = "1.0.171"
serde_json = "1.0.1"
toml = "0.7.6"
zip = "0.6.6"
walkdir = "2.3.3"
git2 = "0.17.2"