[package]
name = "soldeer"
description.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[[bin]]
name = "soldeer"
path = "src/main.rs"

[dependencies]
env_logger = { version = "0.11.9", features = ["unstable-kv"] }
log.workspace = true
soldeer-commands = { path = "../commands", version = "0.10.1" }
tokio.workspace = true
yansi = { version = "1.0.1", features = ["detect-tty", "detect-env"] }
