[package]
name = "soldeer-commands"
description = "High-level commands for the Soldeer CLI"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
bon.workspace = true
clap.workspace = true
clap-verbosity-flag = "3.0.2"
cliclack.workspace = true
derive_more.workspace = true
email-address-parser = "2.0.0"
path-slash.workspace = true
rayon.workspace = true
soldeer-core = { path = "../core", version = "0.10.2" }
tokio.workspace = true

[dev-dependencies]
mockito.workspace = true
reqwest.workspace = true
temp-env.workspace = true
testdir.workspace = true

[features]
default = ["rustls"]
rustls = ["soldeer-core/rustls"]
default-tls = ["soldeer-core/default-tls"]
serde = ["soldeer-core/serde"]
