[package]
name = "soldeer-core"
description = "Core functionality for Soldeer"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[lints]
workspace = true

[dependencies]
bon = "2.0.0"
chrono = { version = "0.4.38", default-features = false, features = [
    "serde",
    "std",
] }
cliclack = { workspace = true, optional = true }
const-hex = "1.12.0"
derive_more = { version = "1.0.0", features = ["from", "display", "from_str"] }
dunce = "1.0.5"
email-address-parser = "2.0.0"
futures = "0.3.30"
home = "0.5.9"
ignore = { version = "0.4.22", features = ["simd-accel"] }
path-slash = "0.2.1"
regex = "1.10.5"
reqwest = { version = "0.12.5", default-features = false, features = [
    "blocking",
    "json",
    "multipart",
    "stream",
] }
sanitize-filename = "0.5.0"
semver = "1.0.23"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
thiserror.workspace = true
tokio.workspace = true
toml_edit = { version = "0.22.15", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
zip = { version = "2.1.3", default-features = false, features = ["deflate"] }
zip-extract = { version = "0.2.0", default-features = false, features = [
    "bzip2",
    "deflate",
] }

[dev-dependencies]
mockito = "1.5.0"
temp-env = { version = "0.3.6", features = ["async_closure"] }
testdir = "0.9.1"

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
cli = ["cliclack"]
serde = []
