[package]
name = "soldeer-core"
description = "Core functionality for Soldeer"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[lints]
workspace = true

[dependencies]
bon.workspace = true
chrono = { version = "0.4.38", default-features = false, features = [
    "serde",
    "std",
] }
cliclack = { workspace = true, optional = true }
const-hex = "1.12.0"
derive_more.workspace = true
dunce = "1.0.5"
home = "0.5.9"
ignore = { version = "0.4.22", features = ["simd-accel"] }
path-slash.workspace = true
rayon.workspace = true
regex = "1.10.5"
reqwest = { workspace = true, features = ["json", "multipart", "stream"] }
sanitize-filename = "0.5.0"
semver = "1.0.23"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
thiserror.workspace = true
tokio.workspace = true
toml_edit = { version = "0.22.15", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
zip = { version = "2.1.3", default-features = false, features = ["deflate"] }
zip-extract = { version = "0.2.0", default-features = false, features = [
    "bzip2",
    "deflate",
] }

[dev-dependencies]
mockito.workspace = true
temp-env.workspace = true
testdir.workspace = true

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
cli = ["cliclack"]
serde = []