[package]
name = "soldeer-core"
description = "Core functionality for Soldeer"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[lints]
workspace = true

[dependencies]
bon.workspace = true
chrono = { version = "0.4.38", default-features = false, features = [
    "serde",
    "std",
] }
const-hex = "1.12.0"
derive_more.workspace = true
dunce = "1.0.5"
gix = { version = "0.80.0", default-features = false, features = [
    "attributes",
    "basic",
    "max-performance-safe",
    "status",
    "worktree-mutation",
] }
home = "0.5.9"
ignore = { version = "0.4.24", features = ["simd-accel"] }
log = { workspace = true, features = ["kv_std"] }
path-slash.workspace = true
rayon.workspace = true
regex = "1.10.5"
reqwest = { workspace = true, features = [
    "http2",                      # default
    "charset",                    # default
    "macos-system-configuration", # default
    "json",
    "multipart",
    "stream",
] }
sanitize-filename = "0.6.0"
semver = "1.0.23"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
thiserror.workspace = true
tokio.workspace = true
toml_edit = { version = "0.23.3", features = ["serde"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
zip = { version = "4.0.0", default-features = false, features = ["deflate"] }
zip-extract = { version = "0.4.0", default-features = false, features = [
    "deflate",
] }

[dev-dependencies]
mockito.workspace = true
temp-env.workspace = true
testdir.workspace = true

[features]
default = ["rustls"]
rustls = ["reqwest/rustls-tls"]
default-tls = ["reqwest/default-tls"]
serde = []
