[package]
name = "soldeer-commands"
description = "High-level commands for the Soldeer CLI"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
clap.workspace = true
cliclack.workspace = true
soldeer-core = { path = "../soldeer-core" }

[features]
default = ["rustls"]
rustls = ["soldeer-core/rustls"]
