[package]
name = "soldeer"
description.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[[bin]]
name = "soldeer"
path = "src/main.rs"

[dependencies]
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
soldeer-commands = { path = "../soldeer-commands" }
tokio.workspace = true
